--- a/app/views/nonprofits/loi_form.html.erb
+++ b/app/views/nonprofits/loi_form.html.erb
@@ -7,7 +7,7 @@
   <li>Please use bullet points rather than paragraphs.</li>
   <li>Brevity is helpful to our partners when reviewing proposals.</li>
 </ul>
-<h3 class="form-title">1. Contact Information</h3>
+<h3 class="form-title well">1. Contact Information</h3>
 
 <form class="form-horizontal" role="form">
     <div class="form-group">
@@ -73,7 +73,7 @@
       </div>
     </div>
 <hr>    
-<h3 class="form-title">2. Organization</h3>
+<h3 class="form-title well">2. Organization</h3>
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="employees">Employees:</label>
@@ -110,7 +110,7 @@
       </div>
     </div>
 <hr>
-<h3 class="form-title">3. Overview and Mission</h3>
+<h3 class="form-title well">3. Overview and Mission</h3>
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="mission">Provide a <em>brief</em> summary of your organization’s mission and history. Please provide your organization’s mission statement, if you have one.</label>
@@ -119,7 +119,7 @@
       </div>
     </div>
 <hr>
-<h3 class="form-title">4. Vision</h3>
+<h3 class="form-title well">4. Vision</h3>
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="vision">What is your organization’s vision and what do you hope to accomplish over the next three years?</label>
@@ -129,7 +129,7 @@
     </div>
 
 <hr>
-<h3 class="form-title">5. Key Concerns</h3>
+<h3 class="form-title well">5. Key Concerns</h3>
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="concerns">Short description (preferably bullets) of the 1-3 things that keep you up at night.</label>
@@ -139,14 +139,14 @@
     </div>
 
 <hr>
-<h3 class="form-title">6. Organizational Capacity Challenges</h3>
+<h3 class="form-title well">6. Organizational Capacity Challenges</h3>
 
-<div class="row">
+<div class="row text-center">
   <div class="col-md-9"></div>
   <div class="col-md-3">Please provide the total amount of time you and your staff spend in each focus area expressed in FTEs: </div>
 </div>
 <br>
-<div class="row form-title">
+<div class="row form-title text-center">
   <!-- <div class="col-md-1"></div> -->
   <div class="col-md-2">Focus Area</div>
   <div class="col-md-5">Please provide a short description (preferably bullets) of your top 1-3 challenge(s) in each area that applies</div>
@@ -190,7 +190,7 @@
     <input type="text" class="form-control" id="board_challenge_2" placeholder="2. Enter a board challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="board_2_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -214,7 +214,7 @@
     <input type="text" class="form-control" id="board_challenge_3" placeholder="3. Enter a board challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="board_3_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -268,7 +268,7 @@
     <input type="text" class="form-control" id="operations_challenge_2" placeholder="2. Enter a business operations challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="operations_2_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -292,7 +292,7 @@
     <input type="text" class="form-control" id="operations_challenge_3" placeholder="3. Enter a business operations challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="operations_3_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -344,7 +344,7 @@
     <input type="text" class="form-control" id="fund_challenge_2" placeholder="2. Enter a fund development challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="fund_2_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -368,7 +368,7 @@
     <input type="text" class="form-control" id="fund_challenge_3" placeholder="3. Enter a fund development challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="fund_3_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -420,7 +420,7 @@
     <input type="text" class="form-control" id="marketing_challenge_2" placeholder="2. Enter a marketing challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="marketing_2_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -444,7 +444,7 @@
     <input type="text" class="form-control" id="marketing_challenge_3" placeholder="3. Enter a marketing challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="marketing_3_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -496,7 +496,7 @@
     <input type="text" class="form-control" id="strategic_challenge_2" placeholder="2. Enter a strategic planning challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="strategic_2_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -520,7 +520,7 @@
     <input type="text" class="form-control" id="strategic_challenge_3" placeholder="3. Enter a strategic planning challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="strategic_3_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -571,7 +571,7 @@
     <input type="text" class="form-control" id="technology_challenge_2" placeholder="2. Enter a technology challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="technology_2_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -595,7 +595,7 @@
     <input type="text" class="form-control" id="technology_challenge_3" placeholder="3. Enter a technology challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="technology_3_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -646,7 +646,7 @@
     <input type="text" class="form-control" id="other_challenge_2" placeholder="2. Enter other challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="other_2_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -670,7 +670,7 @@
     <input type="text" class="form-control" id="other_challenge_3" placeholder="3. Enter other challenge">
   </div>
   <div class="col-md-2">
-    <select name="cars" class="form-control">
+    <select id="other_3_priority" class="form-control">
       <option value="">Select priority</option>
       <option value="high">High</option>
       <option value="medium">Medium</option>
@@ -689,7 +689,7 @@
 </div>
 
 <hr>
-<h3 class="form-title">7. Referral Source</h3>
+<h3 class="form-title well">7. Referral Source</h3>
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="referral">How did you learn of the opportunity to present an LOI to SVP Chicago?</label>
@@ -699,10 +699,9 @@
     </div>
 
 <hr>
-<h3 class="form-title">8. Demographics</h3>
+<h3 class="form-title well">8. Demographics</h3>
 <p>Please answer the following questions to help us track the types of organizations that choose to apply for this opportunity.</p>
-<h4>Check the box if you have programs addressing the sector:</h4>
-
+<h4>Please select the sectors that your programs address:</h4>
 <div class="checkbox">
   <label><input type="checkbox" value="" id="addiction">Alcoholism &amp; Addiction</label>
 </div>
@@ -739,8 +738,8 @@
 </div>
 <hr> 
 
-<div class="row">
 <h4>Please select your geographic focus. If more than one, pick one based on your main program.</h4>
+<div class="row">
   <div class="col-md-5">
     <select id="geo_focus" class="form-control">
       <option value="">Select geographic focus</option>
@@ -754,14 +753,12 @@
     <input class="form-control" type="text" id="other_description" placeholder="(If Neightborhood/Area, please specify)">
   </div>
 </div>
+<hr>
 
-
-
-
-    <hr>
     <div class="form-group pull-right">        
       <div class="col-sm-offset-2 col-sm-10">
         <button type="submit" class="btn btn-default">Submit</button>
       </div>
     </div>
   </form>
+<em>Thank you for your interest in partnering with Social Venture Partners Chicago!</em>
