--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
 <div class="container" ng-app="app">
   <!-- # <%= render 'devise/menu/registration_items' %> -->
   <%= render 'devise/menu/login_items' %>
+
+  <% flash.each do |name, message| %>
+    <div class="alert alert-<%= name %> alert-dismissible fade in" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">&times;</span><span class="sr-only">Close</span></button>
+    <%= message.html_safe %>  
+    </div>
+  <% end %>
+
   <%= yield %>
 
 </div>
