--- a/app/views/nonprofits/loi_form.html.erb
+++ b/app/views/nonprofits/loi_form.html.erb
@@ -45,6 +45,7 @@
 
 <!-- section 10 -->
 <%= render partial: "partials/geographical" %>
+<%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %> 
 
 
   <div class="form-group pull-right">        
